--- a/main.bib
+++ b/main.bib
@@ -184,3 +184,19 @@
   year={1989},
   publisher={North-Holland}
 }
+
+@incollection{locales-and-toposes-as-spaces,
+  title={Locales and toposes as spaces},
+  author={Vickers, Steven},
+  booktitle={Handbook of spatial logics},
+  pages={429--496},
+  year={2007},
+  publisher={Springer}
+}
+
+@article{au-sketches,
+  title={Sketches for arithmetic universes},
+  author={Vickers, Steven},
+  journal={arXiv preprint arXiv:1608.01559},
+  year={2016}
+}
